clang-ir/tests/snapshots/snapshot_fixtures__fixtures__printf_pointer_rejected.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/printf_pointer_rejected.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[6] = "%20p\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca void*, "stable", align 8
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 4660 : u64i
    %4 = cast(int_to_ptr) %3 : void*
    store %4, %1, align 8
    %5 = get_global @printf : ((s8i*, ...) -> s32i)*
    %6 = get_global @.str : s8i[6]*
    %7 = cast(array_to_ptrdecay) %6 : s8i*
    %8 = load %1 : void*, align 8
    %9 = call @printf(%7, %8) : s32i [all]
    %10 = const 0 : s32i
    store %10, %0
    %11 = load %0 : s32i
    return %11
}
