clang-ir/tests/snapshots/snapshot_fixtures__fixtures__printf_scientific_rejected.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/printf_scientific_rejected.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[9] = ConstArray { ty: Array { element_type: Named("s8i"), size: 9 }, elts: Str("%015.2e\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[6] = ConstArray { ty: Array { element_type: Named("s8i"), size: 6 }, elts: Str("%.*e\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[5] = ConstArray { ty: Array { element_type: Named("s8i"), size: 5 }, elts: Str("% e\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[5] = ConstArray { ty: Array { element_type: Named("s8i"), size: 5 }, elts: Str("%#e\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca double, "x", align 8
        %2 = alloca s32i, "prec", align 4
        %3 = const 0 : s32i
        store %3, %0
        %4 = const 1234.5678 : double
        store %4, %1, align 8
        %5 = const 2 : s32i
        store %5, %2, align 4
        %6 = get_global @printf : (s8i*, ...) -> s32i*
        %7 = get_global @.str : s8i[9]*
        %8 = cast(array_to_ptrdecay) %7 : s8i*
        %9 = load %1 : double, align 8
        %10 = call @printf(%8, %9) : s32i [all]
        %11 = get_global @printf : (s8i*, ...) -> s32i*
        %12 = get_global @.str.1 : s8i[6]*
        %13 = cast(array_to_ptrdecay) %12 : s8i*
        %14 = load %2 : s32i, align 4
        %15 = load %1 : double, align 8
        %16 = call @printf(%13, %14, %15) : s32i [all]
        %17 = get_global @printf : (s8i*, ...) -> s32i*
        %18 = get_global @.str.2 : s8i[5]*
        %19 = cast(array_to_ptrdecay) %18 : s8i*
        %20 = load %1 : double, align 8
        %21 = call @printf(%19, %20) : s32i [all]
        %22 = get_global @printf : (s8i*, ...) -> s32i*
        %23 = get_global @.str.3 : s8i[5]*
        %24 = cast(array_to_ptrdecay) %23 : s8i*
        %25 = load %1 : double, align 8
        %26 = call @printf(%24, %25) : s32i [all]
        %27 = const 0 : s32i
        store %27, %0
        %28 = load %0 : s32i
        return %28
}
