clang-ir/tests/snapshots/snapshot_fixtures__fixtures__printf_specifier_survey.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/printf_specifier_survey.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[29] = ConstArray { ty: Array { element_type: Named("s8i"), size: 29 }, elts: Str("%d|%-d|%+d|%05d|%#x|%#o|% d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[15] = ConstArray { ty: Array { element_type: Named("s8i"), size: 15 }, elts: Str("%5d|%-5d|%05d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[5] = ConstArray { ty: Array { element_type: Named("s8i"), size: 5 }, elts: Str("%*d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[19] = ConstArray { ty: Array { element_type: Named("s8i"), size: 19 }, elts: Str("%.3d|%8.3d|%-8.3d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[6] = ConstArray { ty: Array { element_type: Named("s8i"), size: 6 }, elts: Str("%.5s\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.5 : s8i[12] = ConstArray { ty: Array { element_type: Named("s8i"), size: 12 }, elts: Str("hello world"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.6 : s8i[6] = ConstArray { ty: Array { element_type: Named("s8i"), size: 6 }, elts: Str("%.*d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.7 : s8i[39] = ConstArray { ty: Array { element_type: Named("s8i"), size: 39 }, elts: Str("%hd|%hhd|%ld|%lld|%jd|%zu|%zd|%td|%Lf\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.8 : s8i[19] = ConstArray { ty: Array { element_type: Named("s8i"), size: 19 }, elts: Str("%d %i %u %o %x %X\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.9 : s8i[19] = ConstArray { ty: Array { element_type: Named("s8i"), size: 19 }, elts: Str("%f %F %e %E %g %G\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.10 : s8i[7] = ConstArray { ty: Array { element_type: Named("s8i"), size: 7 }, elts: Str("%a %A\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.11 : s8i[10] = ConstArray { ty: Array { element_type: Named("s8i"), size: 10 }, elts: Str("%c %s %p\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.12 : s8i[3] = ConstArray { ty: Array { element_type: Named("s8i"), size: 3 }, elts: Str("hi"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.13 : s8i[7] = ConstArray { ty: Array { element_type: Named("s8i"), size: 7 }, elts: Str("100%%\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s16i, "sh", align 2
        %2 = alloca s8i, "sc", align 1
        %3 = alloca s64i, "lo", align 8
        %4 = alloca s64i, "ll", align 8
        %5 = alloca s64i, "jm", align 8
        %6 = alloca u64i, "zu", align 8
        %7 = alloca s64i, "zd", align 8
        %8 = alloca s64i, "td", align 8
        %9 = alloca long_double<f80>, "ld", align 16
        %10 = const 0 : s32i
        store %10, %0
        %11 = get_global @printf : (s8i*, ...) -> s32i*
        %12 = get_global @.str : s8i[29]*
        %13 = cast(array_to_ptrdecay) %12 : s8i*
        %14 = const -3 : s32i
        %15 = const 5 : s32i
        %16 = const 5 : s32i
        %17 = const 5 : s32i
        %18 = const 255 : s32i
        %19 = const 8 : s32i
        %20 = const 5 : s32i
        %21 = call @printf(%13, %14, %15, %16, %17, %18, %19, %20) : s32i [all]
        %22 = get_global @printf : (s8i*, ...) -> s32i*
        %23 = get_global @.str.1 : s8i[15]*
        %24 = cast(array_to_ptrdecay) %23 : s8i*
        %25 = const 42 : s32i
        %26 = const 42 : s32i
        %27 = const 42 : s32i
        %28 = call @printf(%24, %25, %26, %27) : s32i [all]
        %29 = get_global @printf : (s8i*, ...) -> s32i*
        %30 = get_global @.str.2 : s8i[5]*
        %31 = cast(array_to_ptrdecay) %30 : s8i*
        %32 = const 5 : s32i
        %33 = const 42 : s32i
        %34 = call @printf(%31, %32, %33) : s32i [all]
        %35 = get_global @printf : (s8i*, ...) -> s32i*
        %36 = get_global @.str.3 : s8i[19]*
        %37 = cast(array_to_ptrdecay) %36 : s8i*
        %38 = const 5 : s32i
        %39 = const 5 : s32i
        %40 = const 5 : s32i
        %41 = call @printf(%37, %38, %39, %40) : s32i [all]
        %42 = get_global @printf : (s8i*, ...) -> s32i*
        %43 = get_global @.str.4 : s8i[6]*
        %44 = cast(array_to_ptrdecay) %43 : s8i*
        %45 = get_global @.str.5 : s8i[12]*
        %46 = cast(array_to_ptrdecay) %45 : s8i*
        %47 = call @printf(%44, %46) : s32i [all]
        %48 = get_global @printf : (s8i*, ...) -> s32i*
        %49 = get_global @.str.6 : s8i[6]*
        %50 = cast(array_to_ptrdecay) %49 : s8i*
        %51 = const 3 : s32i
        %52 = const 5 : s32i
        %53 = call @printf(%50, %51, %52) : s32i [all]
        %54 = const 7 : s16i
        store %54, %1, align 2
        %55 = const 8 : s8i
        store %55, %2, align 1
        %56 = const 9 : s64i
        store %56, %3, align 8
        %57 = const 10 : s64i
        store %57, %4, align 8
        %58 = const 11 : s64i
        store %58, %5, align 8
        %59 = const 12 : u64i
        store %59, %6, align 8
        %60 = const -12 : s64i
        store %60, %7, align 8
        %61 = const 13 : s64i
        store %61, %8, align 8
        %62 = const 1.500000e+00 : long_double<f80>
        store %62, %9, align 16
        %63 = get_global @printf : (s8i*, ...) -> s32i*
        %64 = get_global @.str.7 : s8i[39]*
        %65 = cast(array_to_ptrdecay) %64 : s8i*
        %66 = load %1 : s16i, align 2
        %67 = cast(integral) %66 : s32i
        %68 = load %2 : s8i, align 1
        %69 = cast(integral) %68 : s32i
        %70 = load %3 : s64i, align 8
        %71 = load %4 : s64i, align 8
        %72 = load %5 : s64i, align 8
        %73 = load %6 : u64i, align 8
        %74 = load %7 : s64i, align 8
        %75 = load %8 : s64i, align 8
        %76 = load %9 : long_double<f80>, align 16
        %77 = call @printf(%65, %67, %69, %70, %71, %72, %73, %74, %75, %76) : s32i [all]
        %78 = get_global @printf : (s8i*, ...) -> s32i*
        %79 = get_global @.str.8 : s8i[19]*
        %80 = cast(array_to_ptrdecay) %79 : s8i*
        %81 = const -1 : s32i
        %82 = const -1 : s32i
        %83 = const 1 : u32i
        %84 = const 8 : u32i
        %85 = const 255 : u32i
        %86 = const 255 : u32i
        %87 = call @printf(%80, %81, %82, %83, %84, %85, %86) : s32i [all]
        %88 = get_global @printf : (s8i*, ...) -> s32i*
        %89 = get_global @.str.9 : s8i[19]*
        %90 = cast(array_to_ptrdecay) %89 : s8i*
        %91 = const 3.500000e+00 : double
        %92 = const 3.500000e+00 : double
        %93 = const 12345.678900000001 : double
        %94 = const 12345.678900000001 : double
        %95 = const 1.234000e-04 : double
        %96 = const 123456.789 : double
        %97 = call @printf(%90, %91, %92, %93, %94, %95, %96) : s32i [all]
        %98 = get_global @printf : (s8i*, ...) -> s32i*
        %99 = get_global @.str.10 : s8i[7]*
        %100 = cast(array_to_ptrdecay) %99 : s8i*
        %101 = const 1.000000e+00 : double
        %102 = const 1.000000e+00 : double
        %103 = call @printf(%100, %101, %102) : s32i [all]
        %104 = get_global @printf : (s8i*, ...) -> s32i*
        %105 = get_global @.str.11 : s8i[10]*
        %106 = cast(array_to_ptrdecay) %105 : s8i*
        %107 = const 120 : s32i
        %108 = get_global @.str.12 : s8i[3]*
        %109 = cast(array_to_ptrdecay) %108 : s8i*
        %110 = cast(bitcast) %1 : void*
        %111 = call @printf(%106, %107, %109, %110) : s32i [all]
        %112 = get_global @printf : (s8i*, ...) -> s32i*
        %113 = get_global @.str.13 : s8i[7]*
        %114 = cast(array_to_ptrdecay) %113 : s8i*
        %115 = call @printf(%114) : s32i [all]
        %116 = const 0 : s32i
        store %116, %0
        %117 = load %0 : s32i
        return %117
}
