clang-ir/tests/snapshots/snapshot_fixtures__fixtures__printf_string_char.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/printf_string_char.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[13] = "%s %c %c %d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[4] = "tag" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[11] = "literal=%s" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[5] = "tail" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str : s8i[13]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = get_global @.str.1 : s8i[4]*
    %6 = cast(array_to_ptrdecay) %5 : s8i*
    %7 = const 65 : s32i
    %8 = const 10 : s32i
    %9 = const 7 : s32i
    %10 = call @printf(%4, %6, %7, %8, %9) : s32i [all]
    %11 = get_global @printf : ((s8i*, ...) -> s32i)*
    %12 = get_global @.str.2 : s8i[11]*
    %13 = cast(array_to_ptrdecay) %12 : s8i*
    %14 = get_global @.str.3 : s8i[5]*
    %15 = cast(array_to_ptrdecay) %14 : s8i*
    %16 = call @printf(%13, %15) : s32i [all]
    %17 = const 0 : s32i
    store %17, %0
    %18 = load %0 : s32i
    return %18
}
