clang-ir/tests/snapshots/snapshot_fixtures__fixtures__printf_string_width_precision.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/printf_string_width_precision.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[21] = "%5s|%-5s|%.1s|%6.1s\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[3] = "hi" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str : s8i[21]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = get_global @.str.1 : s8i[3]*
    %6 = cast(array_to_ptrdecay) %5 : s8i*
    %7 = get_global @.str.1 : s8i[3]*
    %8 = cast(array_to_ptrdecay) %7 : s8i*
    %9 = get_global @.str.1 : s8i[3]*
    %10 = cast(array_to_ptrdecay) %9 : s8i*
    %11 = get_global @.str.1 : s8i[3]*
    %12 = cast(array_to_ptrdecay) %11 : s8i*
    %13 = call @printf(%4, %6, %8, %10, %12) : s32i [all]
    %14 = const 0 : s32i
    store %14, %0
    %15 = load %0 : s32i
    return %15
}
